Fixed: disqus not align with heading

--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -81,4 +81,7 @@ $card-separator-color: #717F8C !default;
   .post-content {
     font-family: 'Old Standard TT', sans-serif;
   }
+  .post-comment {
+    margin-top: 21px;
+  }
 }
